# aivoiceplatform

./: .env.example  .gitignore  README.md  docker-compose.yml  email-templates.html  livekit.yaml  package-lock.json  sip.yaml
.github/workflows/: deploy.yml  test.yml
docs/: setup.md  supabase_schema.sql  twilio-sip-setup.md
docs/migrations/: phase3_5_optional_agent_client.sql  phase3_5_phone_numbers_livekit_ids.sql  phase3_6_agent_tts_speed.sql  phase3_7_inworld_tts_tuning.sql  phase3_calls_filters_and_phone_numbers.sql  phase4_post_call_webhook.sql  phase_s2_rls.sql
monitoring/: prometheus.yml
monitoring/vm-monitor/: .env.example  Caddyfile  README.md  docker-compose.yml  prometheus.yml
scripts/: Caddyfile.snippet  add_sip_number.py  deploy.sh  deploy_server.sh  setup_panama_sip.py  setup_sip_trunks.py  sip_firewall.sh  smoke_e2e.py
services/agent/: Dockerfile  pyproject.toml
services/agent/src/: agent.py  cost_estimator.py  cost_logger.py
services/agent/tests/: test_cost_estimator.py
services/api/: Dockerfile  healthcheck.sh  main.py  pyproject.toml
services/api/tests/: conftest.py  test_agents_create.py  test_health.py  test_phone_provision.py  test_token.py
services/dashboard/: Dockerfile  components.json  next.config.ts  package-lock.json  package.json
services/dashboard/app/: globals.css  layout.tsx  page.tsx
services/dashboard/components/: AppShell.tsx  AppSidebar.tsx  AppTopbar.tsx  nav-config.ts
services/dashboard/lib/: admin-auth.ts  api-config.ts  api.ts  auth.ts  portal-auth.ts  (+1 more)
services/dialer/: dialer.py  main.py  pyproject.toml
(+51 files in other folders)
