[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "livekit-api>=0.7",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "prometheus-client>=0.20.0",
    "psutil>=5.9.0",
    "supabase>=2.30.1",
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "asgi-lifespan>=2.1.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --tb=short"
